--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.28.1",
     "axios": "^0.21.1",
+    "deck.gl": "^8.5.6",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
+    "react-map-gl": "^6.1.16",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
