--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "marketvisit",
+  "homepage": "https://app.acibd.com/marketvisit_app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -15,7 +17,7 @@
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
-    "react-map-gl": "^6.1.16",
+    "react-map-gl": "^5.2.11",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
