--- a/package.json
+++ b/package.json
@@ -4,21 +4,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "apexcharts": "^3.28.1",
     "axios": "^0.21.1",
+    "date-fns": "^2.23.0",
     "deck.gl": "^8.5.6",
+    "material-table": "^1.61.0",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^4.0.0",
     "react-map-gl": "^5.2.11",
     "react-redux": "^7.2.4",
+    "react-responsive-carousel": "^3.2.21",
     "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "redux": "^4.1.1",
